@@ -6,6 +6,7 @@ Version 1.7.15+svn:
  * Miscellaneous and bug fixes:
    * Defaulted log level to error again
    * Fix bug #14114: checksum operations fail against certain scenario events
+   * Fix bug #15601: replay crashes when replay log messages are enabled
 
 Version 1.7.15-1.8rc1:
  * AI:
